[package]
name = "sourcelib"
version = "0.1.0"
authors = ["jturtle"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsp = { path = "crates/bsp" }
map = { path = "crates/map" }
keyvalues = { path = "crates/keyvalues" }
sourcetypes = { path = "crates/sourcetypes" }