[package]
name = "sourcelib"
version = "0.1.1"
authors = ["JTurtle"]
edition = "2018"
readme = "README.md"
description = "A library for using Source Engine files and data types"
repository = "https://github.com/JTurtl3/sourcelib"
license = "MIT"
keywords = ["gamedev", "source-engine"]

[dependencies]
